# gpstransmode

./: .gitignore  pyproject.toml
model/: gps_data_engineering.py  modeling.py  raw_data_processing.py  segment_featurization.py
